# forward_ray

./: .gitignore  CMakeLists.txt  README.md  algo.h  arrayOfReceiversTransmitters.h  beam.h  build.cmd  data.h  dft.cpp  dft.h  diffs.h  edge.h  fft.cpp  fft.h  figure.h  helper.h  intersection.h  main.cpp  mpi.cmd  point.h  run.cmd  speedmap.h  vec2.h
data/in/: 3-0.5_2D-z80_150.mdl  block.mdl  bug.mdl  clear.mdl  column.mdl  dot.mdl  hole.mdl  holm.mdl  line.mdl  lineD.mdl  lineDE.mdl  lines.mdl  mblock.mdl  mini.mdl  multi2.mdl  multi3.mdl  multi4.mdl  triangle.mdl  triangleV.mdl  triangleV2.mdl  triangleV3.mdl
lib/: fft.h
simple_fft/: fft.hpp  fft_impl.hpp
src/: algo.h  comp.cpp  comp.h  data.h  edge.h  exo.h  figure.h  helper.h  intersection.h  point.h  vec2.h
src/lib/: fft.cpp
src/lib/simple_fft/: fft.h
